fixing table overflow issue

--- a/web/app/assets/stylesheets/application.css
+++ b/web/app/assets/stylesheets/application.css
@@ -128,6 +128,10 @@ hr {
 }
 
 .table {
+  overflow: scroll;
+}
+
+.table table {
   width: 100%;
 }
 
